[gd_scene load_steps=7 format=3 uid="uid://b8c486x6sosbd"]

[ext_resource type="Theme" uid="uid://dbcjbkfe0u0yd" path="res://themes/flexi_button_orange.tres" id="1_s6sth"]
[ext_resource type="Script" path="res://scenes/active_lists/active_list_button.gd" id="2_nj7qs"]
[ext_resource type="Theme" uid="uid://3mshnn7sijsm" path="res://themes/blue_button.tres" id="3_7rs05"]
[ext_resource type="PackedScene" uid="uid://bu7xqjd8obe0a" path="res://scenes/other/buttons/blank_button.tscn" id="4_ipkjf"]
[ext_resource type="Theme" uid="uid://carp04g3afhlg" path="res://themes/purple_button.tres" id="5_p4smt"]
[ext_resource type="Theme" uid="uid://bb14jpmq3rnmf" path="res://themes/red_button.tres" id="5_qk4l0"]

[node name="Room" type="Button"]
custom_minimum_size = Vector2(950, 80)
theme = ExtResource("1_s6sth")
script = ExtResource("2_nj7qs")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 9.0
offset_right = 930.0
offset_bottom = 72.0

[node name="Label" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(491.04, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("3_7rs05")
theme_override_font_sizes/font_size = 21
text = "Question"
vertical_alignment = 1
autowrap_mode = 2

[node name="ViewList" parent="HBoxContainer" instance=ExtResource("4_ipkjf")]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("5_p4smt")
text = "View List"

[node name="Deactivate" parent="HBoxContainer" instance=ExtResource("4_ipkjf")]
visible = false
custom_minimum_size = Vector2(214.94, 0)
layout_mode = 2
theme = ExtResource("5_qk4l0")
text = "Deactivate"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/ViewList" to="." method="_on_view_list_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/ViewList" to="." method="_on_view_list_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/ViewList" to="." method="_on_view_list_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/Deactivate" to="." method="_on_deactivate_mouse_entered"]
[connection signal="mouse_entered" from="HBoxContainer/Deactivate" to="." method="_on_delete_list_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Deactivate" to="." method="_on_deactivate_mouse_exited"]
[connection signal="mouse_exited" from="HBoxContainer/Deactivate" to="." method="_on_delete_list_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/Deactivate" to="." method="_on_deactivate_pressed"]
